--- a/lost-and-found/lost-and-found/Info.plist
+++ b/lost-and-found/lost-and-found/Info.plist
@@ -31,8 +31,11 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Find your way back</string>
 </dict>
 </plist>
